force-app/main/default/objects/ILF_Factors__c/ILF_Factors__c.object-meta.xml
<CustomObject>
    <label>ILF Factor</label>
    <nameField>
        <displayFormat>ILF - {000}</displayFormat>
        <label>ILF Factors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ILF Factors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>