force-app/main/default/objects/ILF_Factors__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>RPM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>